Removing CHECK_PORT Variable

--- a/proxy/api_gateway.template
+++ b/proxy/api_gateway.template
@@ -28,7 +28,7 @@ server {
         if ($http_authorization = "") {
             return 401;
         }
-        proxy_pass http://${CHECK_DOMAIN}:${CHECK_PORT}/authentication/v1/authentication/validate;
+        proxy_pass http://${CHECK_DOMAIN}/authentication/v1/authentication/validate;
         proxy_pass_request_body off;
         proxy_set_header Content-Length "";
         proxy_set_header X-Original-URI $request_uri;
